<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="dismiss_call">Decline</string>
    <string name="answer_call">Answer</string>
    <string name="verify_infotext_top">Compare with partner</string>
    <string name="verify_infotext_bottom">and enter partner’s name here</string>
    <string name="accept_video">Accept</string>
    <string name="close_dialog">Close</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="confirm_dialog">Confirm</string>
    <string name="provision_later">Later</string>
    <string name="crypto_padlock">Padlock to show security state</string>
    <string name="error_code">Error code: </string>
    <string name="logout">Logout</string>
    <string name="sip_state_calling">Calling…</string>
    <string name="sip_state_connecting">Connecting…</string>
    <string name="sip_state_ringing">Ringing</string>
    <string name="sip_state_ended">Call ended</string>
    <string name="sip_state_online">Online</string>
    <string name="sip_state_offline">Offline</string>
    <string name="sip_error_register">Cannot register</string>
    <string name="sip_error_generic">Cannot connect</string>
    <string name="sip_error_decline">Call declined</string>
    <string name="sip_error_no_user">User not found</string>
    <string name="sip_error_no_cover">No radio coverage</string>
    <string name="sip_error_no_server">Could not reach server</string>
    <string name="call_type_audio">Incoming call</string>
    <string name="call_error">Error</string>
    <string name="secstate_secure">SECURE</string>
    <string name="secstate_secure_question">SECURE?</string>
    <string name="secstate_not_secure">Not SECURE</string>
    <string name="secstate_looking">Looking for peer</string>
    <string name="secstate_going_sec">Going secure</string>
    <string name="secstate_sec_disabled">Not SECURE - not enabled</string>
    <string name="to_server_only">to server</string>
    <string name="crypto_peer_name">Peer name</string>
    <string name="crypto_peer_client">ZRTP Peer client</string>
    <string name="crypto_peer_client_id">ZRTP client ID</string>
    <string name="crypto_peer_client_proto">Protocol version</string>
    <string name="crypto_secure_since">Secure since</string>
    <string name="crypto_crypto_components">Crypto Components</string>
    <string name="crypto_crypto_components_tls">TLS Ciphers:</string>
    <string name="crypto_crypto_components_zhash">ZRTP Hash:</string>
    <string name="crypto_crypto_components_pk">Key Exchange:</string>
    <string name="crypto_crypto_components_cipher">Cipher:</string>
    <string name="crypto_crypto_components_hash">Hash:</string>
    <string name="crypto_crypto_components_sauth">SRTP Auth Tag:</string>
    <string name="crypto_shared_secrets">Shared Secrets</string>
    <string name="call_mng_conference">Conference</string>
    <string name="call_mng_private">Private</string>
    <string name="call_mng_in_out">Incoming, outgoing</string>
    <string name="zrtp_we_header">ZRTP security message</string>
    <string name="zrtp_we_error">ZRTP Error</string>
    <string name="zrtp_we_warn">ZRTP Warning</string>
    <string name="srtp_we_warn">SRTP Warning</string>
    <string name="zrtp_show_details">Show details</string>
    <string name="zrtp_hide_details">Hide details</string>
    <string name="provisioning_welcome">Welcome to Silent Circle</string>
    <string name="provisioning_vertu_welcome">Welcome to Silent Circle in partnership with Vertu</string>
    <string name="provisioning_username_hint">Username</string>
    <string name="provisioning_password_hint">Password</string>
    <string name="provisioning_password_hint2">Enter password (verify)</string>
    <string name="provisioning_firstname_hint">Enter first name</string>
    <string name="provisioning_lastname_hint">Enter last name</string>
    <string name="provisioning_email_hint">E-mail address</string>
    <string name="provisioning_no_network">Network not available: </string>
    <string name="provisioning_no_data">No provisioning data available</string>
    <string name="provisioning_wrong_format">Wrong data format: </string>
    <string name="provisioning_error">Provisioning Error</string>
    <string name="provisioning_info">Information</string>
    <string name="provisioning_user_req">Username is required. Please check.</string>
    <string name="provisioning_user_invalid">Username must be lowercase alphanumeric (a-z,0-9) and start with a letter.</string>
    <string name="provisioning_psn_invalid">No valid serial number found!</string>
    <string name="provisioning_password_req">Password is required. Please check.</string>
    <string name="provisioning_password_match">Passwords do not match. Please check.</string>
    <string name="provisioning_firstname_req">A first name is required. Please check.</string>
    <string name="provisioning_lastname_req">A last name is required. Please check.</string>
    <string name="provisioning_email_req">An email address is required. Please check.</string>
    <string name="provisioning_email_invalid">Email address invalid. Please check.</string>
    <string name="provisioning_already_registered">Device already registered.</string>
    <string name="provisioning_agreement">By logging in, you are agreeing to our</string>
    <string name="pwstrength_weak">Password strength: WEAK</string>
    <string name="pwstrength_good">Password strength: GOOD</string>
    <string name="pwstrength_strong">Password strength: STRONG</string>
    <string name="provisioning_show_pw">Show password</string>
    <string name="provisioning_privacy_tc">I have read and accepted the privacy policy and terms and conditions from <a href="https://accounts.silentcircle.com/terms/">Silent Circle</a></string>
    <string name="provisioning_terms">terms of service</string>
    <string name="provisioning_privacy">privacy policy</string>
    <string name="provisioning_get_news">I would like to receive exclusive news and invitations from Services</string>
    <string name="provisioning_new_account">Create new account</string>
    <string name="provisioning_existing_account">Login to existing account</string>
    <string name="provisioning_existing_account_bp">Login</string>
    <string name="provisioning_check_tc">Please accept and check the terms and conditions</string>
    <string name="provisioning_create">Create</string>
    <string name="provisioning_get_activation_code">Please login to your account at\nwww.silentcircle.com\nto retrieve an activation code.</string>
    <string name="provisioning_credentials">Username or password wrong. Please check.</string>
    <string name="provisioning_forgot_pwd">I forgot my password.</string>
    <string name="key_manager_available">Using Silent Circle KeyManager.</string>
    <string name="thanks_number">Number:</string>
    <string name="thanks_name">Name:</string>
    <string name="preferred_sas_type">Preferred SAS type</string>
    <string name="sas_char_mode">SAS displayed as four characters</string>
    <string name="sas_word_mode">SAS displayed as two words</string>
    <string name="sp_ringtone">Ringtone</string>
    <string name="no_ringtone">Default</string>
    <string name="preferred_algorithms">Prefer Non-NIST Suite</string>
    <string name="nist_preferred">Always prefer non-NIST algorithms if available: Twofish, Skein, and Bernstein curves.</string>
    <string name="sca_info_install">"Silent Circle provides an encrypted app that lets you and only you access your contacts and call log.
        \nSilent Contacts is a free add-on from Silent Circle.
        \nFor more information, go to our website.
        \n<b>Install Silent Contacts</b>"</string>
    <string name="sca_add_security">Add Security</string>
    <string name="description_dial_button">Dial</string>
    <string name="description_delete_button">backspace</string>
    <string name="contacts_image_button">Open contacts</string>
    <string name="recent_image_button">Display recent calls</string>
    <string name="zrtp_common_cmp">"You should verbally compare the authentication code with the person you are calling. If it doesn’t match, it indicates that someone may have intercepted the call."</string>
    <string name="zrtp_common_cls">Connection Error. Please close and call again.</string>
    <string name="zrtp_common_upd">The person you are calling needs to update their Silent Phone application to the latest version.</string>
    <string name="zrtp_common_app">Application Error. Please re-install Silent Phone.</string>
    <string name="permission_read">Read secure contacts</string>
    <string name="permission_write">Write secure contacts</string>
    <string name="permission_read_km">Read access to Silent Circle key manager</string>
    <string name="permission_write_km">Write access to Silent Circle key manager</string>
    <string name="call_duration">Duration</string>
    <string name="provisioning_stepInfo_1">Step 1 of 3</string>
    <string name="provisioning_stepInfo_2">Step 2 of 3</string>
    <string name="provisioning_stepInfo_3">Step 3 of 3</string>
    <string name="provisioning_vertu_email_info">An alternate email address is necessary to receive important updates and benefits regarding your account.</string>
    <string name="provisioning_vertu_welcome_long">As a Vertu Customer you enjoy 12 months of complimentary access to Silent Circle’s encrypted communications services.</string>
    <string name="video_audio_mute">Toggle mute audio</string>
    <string name="video_switch_camera">Switch cameras</string>
    <string name="provisioning_infoText">Account Creation</string>
    <string name="provisioning_bp_welcome">Welcome to Silent Circle in partnership with BlackPhone</string>
    <string name="provisioning_bp_email_info">An email address is necessary to receive important updates and information regarding your account.</string>
    <string name="provisioning_bp_welcome_long">As a Blackphone customer you enjoy 12 months of complimentary access to Silent Circle’s encrypted communications services.</string>
    <string name="provisioning_bp_account">Silent Circle Account</string>
    <string name="mute_button">Mute</string>
    <string name="video_button">Video</string>
    <string name="video_control">Video control</string>
    <string name="add_call">Add call</string>
    <string name="audio_options_button">Audio\noptions</string>
    <string name="verify_label">Touch and verify</string>
    <string name="stop_video">Audio only</string>
    <string name="pause_video">Pause video</string>
    <string name="send_video">Send video</string>
    <string name="prepare">Preparing …</string>
    <string name="call_manager">Call Manager</string>
    <string name="dtmf_dialer">Tone dialer</string>
    <string name="info_screen">Settings/info</string>
    <string name="security_options_header">Security options</string>
    <string name="call_info_generic">Call information</string>
    <string name="menu_search">Search</string>
    <string name="menu_new_contact_action_bar">Add Contact</string>
    <string name="menu_new_group_action_bar">Add Group</string>
    <string name="menu_clear_frequents">Clear frequents</string>
    <string name="menu_import_export">Import/export</string>
    <string name="menu_remove_vcard_files">Remove vCards</string>
    <string name="menu_export_database">Export database files</string>
    <string name="menu_settings" msgid="377929915873428211">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="chat">Chat</string>
    <string name="call_mng_conference_explanation">Drag call into conference</string>
    <string name="call_mng_private_explanation">Drag here to remove from conference</string>
</resources>