<?xml version="1.0" encoding="utf-8"?>
<!--
// +++LICENSE_BEGIN+++
/*
 * Copyright © 2014, Silent Circle
 * All rights reserved.
 */
// +++LICENSE_END+++
 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:orientation="vertical"
                tools:context=".activities.Provisioning">

    <TextView
            android:id="@+id/Placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="1dp" />

    <ScrollView
            android:id="@+id/Scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Placeholder"
            android:layout_above="@+id/ProvisioningButtons"
            android:baselineAligned="false"
            android:fillViewport="true"
            android:focusable="false"
            android:visibility="visible"
            tools:visibility="visible">

        <RelativeLayout
                android:id="@+id/ProvisioningUserFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="visible"
                tools:visibility="visible">

            <TextView
                    android:id="@+id/HeaderText"
                    style="@style/Widget.Silent.SimpleText.Medium"
                    android:text="@string/provisioning_infoText"/>

            <EditText
                    style="@style/Widget.Silent.SimpleText"
                    android:id="@+id/ProvisioningUsernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/HeaderText"
                    android:layout_marginTop="32dp"
                    android:layout_marginLeft="40dp"
                    android:hint="@string/provisioning_username_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text|textNoSuggestions"
                    android:singleLine="true"
                    android:tag="username"
                    android:textColor="@color/auth_active_body_text_grey"
                    android:textSize="14sp"/>

            <EditText
                    style="@style/Widget.Silent.SimpleText"
                    android:id="@+id/ProvisioningPasswordInput"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ProvisioningUsernameInput"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="40dp"
                    android:hint="@string/provisioning_password_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:tag="password"
                    android:textColor="@color/auth_active_body_text_grey"
                    android:textSize="14sp"/>

            <TextView
                    style="@style/Widget.Silent.SimpleText"
                    android:id="@+id/ProvisioningPasswordStrength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/ProvisioningPasswordInput"
                    android:layout_marginTop="3dp"
                    android:textSize="12sp"
                    tools:text="Good"
                    android:textColor="@color/auth_inactive_body_text_grey"/>

            <CheckBox
                    android:id="@+id/ShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ProvisioningPasswordStrength"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/provisioning_show_pw"
                    android:textColor="@color/auth_inactive_body_text_grey"
                    android:textSize="12sp"/>

            <TextView
                    style="@style/Widget.Silent"
                    android:id="@+id/ProvisioningEmailInfo"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/ShowPassword"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@null"
                    android:text="@string/provisioning_bp_email_info"
                    android:textColor="@color/auth_inactive_body_text_grey"
                    android:textSize="12sp"/>

            <EditText
                    style="@style/Widget.Silent.SimpleText"
                    android:id="@+id/ProvisioningEmailInput"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ProvisioningEmailInfo"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="40dp"
                    android:hint="@string/provisioning_email_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:tag="email"
                    android:textColor="@color/auth_active_body_text_grey"
                    android:textSize="14sp"/>

            <EditText
                    style="@style/Widget.Silent.SimpleText"
                    android:id="@+id/ProvisioningFirstNameInput"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ProvisioningEmailInput"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="40dp"
                    android:hint="@string/provisioning_firstname_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true"
                    android:tag="first_name"
                    android:textColor="@color/auth_active_body_text_grey"
                    android:textSize="14sp"/>

            <EditText
                    style="@style/Widget.Silent.SimpleText"
                    android:id="@+id/ProvisioningLastNameInput"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ProvisioningFirstNameInput"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="40dp"
                    android:hint="@string/provisioning_lastname_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:singleLine="true"
                    android:tag="last_name"
                    android:textColor="@color/auth_active_body_text_grey"
                    android:textSize="14sp"/>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
            android:id="@+id/ProvisioningButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="right"
            android:visibility="visible"
            tools:visibility="visible">

        <TextView
            style="@style/Widget.Silent.SimpleText.Medium"
                android:id="@+id/back"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:clickable="true"
                android:text="@string/back"
                android:textAllCaps="true"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
            style="@style/Widget.Silent.SimpleText.Medium"
                android:id="@+id/next"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:clickable="true"
                android:text="@string/next"
                android:textColor="@drawable/text_clickable_selector"
                android:textAllCaps="true"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>
